# opentelemetry-rust

./: Cargo.toml  README.md
examples/logs-basic/: Cargo.toml
examples/logs-basic/src/: main.rs
examples/metrics-basic/: Cargo.toml
examples/metrics-basic/src/: main.rs
examples/traceresponse/: Cargo.toml
examples/traceresponse/src/: client.rs  server.rs
opentelemetry/: Cargo.toml  README.md
opentelemetry-api/: Cargo.toml  README.md
opentelemetry-api/src/: baggage.rs  common.rs  context.rs
opentelemetry-api/src/global/: metrics.rs  mod.rs
opentelemetry-api/src/trace/: context.rs  mod.rs  span.rs  span_context.rs  tracer.rs  tracer_provider.rs
opentelemetry-appender-log/: Cargo.toml
opentelemetry-appender-log/src/: lib.rs
opentelemetry-aws/: Cargo.toml
opentelemetry-aws/src/: lib.rs
opentelemetry-contrib/: Cargo.toml
opentelemetry-contrib/src/trace/exporter/: jaeger_json.rs
opentelemetry-contrib/src/trace/propagator/: trace_context_response.rs
opentelemetry-contrib/src/trace/propagator/binary/: base64_format.rs  binary_propagator.rs
opentelemetry-datadog/: Cargo.toml
opentelemetry-datadog/examples/: datadog.rs
opentelemetry-datadog/src/: lib.rs
opentelemetry-datadog/src/exporter/: mod.rs
opentelemetry-datadog/src/exporter/model/: mod.rs  v03.rs  v05.rs
opentelemetry-dynatrace/: Cargo.toml
opentelemetry-dynatrace/src/: lib.rs  metric.rs
opentelemetry-dynatrace/src/transform/: metrics.rs
opentelemetry-dynatrace/tests/: http_test.rs
opentelemetry-http/: Cargo.toml  README.md
opentelemetry-http/src/: lib.rs
opentelemetry-jaeger/: Cargo.toml  README.md
opentelemetry-jaeger/examples/actix-udp/: Cargo.toml
opentelemetry-jaeger/examples/actix-udp/src/: main.rs
opentelemetry-jaeger/examples/remote-sampler/: Cargo.toml
opentelemetry-jaeger/examples/remote-sampler/src/: main.rs
opentelemetry-jaeger/src/: lib.rs
opentelemetry-jaeger/src/exporter/: collector.rs  mod.rs  runtime.rs  uploader.rs
opentelemetry-jaeger/src/exporter/config/: agent.rs  mod.rs
opentelemetry-jaeger/src/exporter/config/collector/: http_client.rs  mod.rs
opentelemetry-jaeger/src/exporter/thrift/: mod.rs
opentelemetry-jaeger/tests/: integration_test.rs
opentelemetry-otlp/: Cargo.toml
opentelemetry-otlp/examples/basic-otlp/: Cargo.toml
opentelemetry-otlp/examples/basic-otlp-http/: Cargo.toml
opentelemetry-otlp/examples/basic-otlp-http/src/: main.rs
opentelemetry-otlp/examples/basic-otlp/src/: main.rs
opentelemetry-otlp/examples/external-otlp-grpcio-async-std/: Cargo.toml
opentelemetry-otlp/examples/external-otlp-grpcio-async-std/src/: main.rs
opentelemetry-otlp/src/: lib.rs  logs.rs  metric.rs  span.rs
opentelemetry-otlp/src/exporter/: http.rs
opentelemetry-otlp/src/transform/: metrics.rs  resource.rs
opentelemetry-otlp/tests/: smoke.rs
opentelemetry-prometheus/: Cargo.toml
opentelemetry-prometheus/examples/: hyper.rs
opentelemetry-prometheus/src/: config.rs  lib.rs
opentelemetry-prometheus/tests/: integration_test.rs
opentelemetry-proto/: Cargo.toml
opentelemetry-proto/src/transform/: common.rs  logs.rs  metrics.rs  traces.rs  tracez.rs
opentelemetry-sdk/: Cargo.toml  README.md
opentelemetry-sdk/benches/: batch_span_processor.rs  metric.rs  trace.rs
opentelemetry-sdk/src/: instrumentation.rs  lib.rs
opentelemetry-sdk/src/attributes/: set.rs
opentelemetry-sdk/src/export/: mod.rs  trace.rs
opentelemetry-sdk/src/export/logs/: mod.rs
opentelemetry-sdk/src/logs/: log_emitter.rs  log_processor.rs
opentelemetry-sdk/src/metrics/: aggregation.rs  exporter.rs  instrument.rs  manual_reader.rs  meter.rs  meter_provider.rs  mod.rs  periodic_reader.rs  pipeline.rs  reader.rs  view.rs
opentelemetry-sdk/src/metrics/data/: mod.rs
opentelemetry-sdk/src/metrics/internal/: aggregator.rs  filter.rs  histogram.rs  last_value.rs  sum.rs
opentelemetry-sdk/src/propagation/: baggage.rs  composite.rs  trace_context.rs
opentelemetry-sdk/src/resource/: env.rs  mod.rs  os.rs  process.rs  telemetry.rs
opentelemetry-sdk/src/testing/: trace.rs
opentelemetry-sdk/src/testing/metrics/: in_memory_exporter.rs
opentelemetry-sdk/src/trace/: config.rs  evicted_hash_map.rs  provider.rs  runtime_tests.rs  sampler.rs  span.rs  span_processor.rs  tracer.rs
opentelemetry-sdk/src/trace/id_generator/: aws.rs  mod.rs
opentelemetry-sdk/src/trace/sampler/jaeger_remote/: rate_limit.rs  sampler.rs  sampling_strategy.rs
opentelemetry-semantic-conventions/: Cargo.toml  README.md
opentelemetry-semantic-conventions/scripts/templates/: header_resource.rs  header_trace.rs
opentelemetry-semantic-conventions/src/: resource.rs  trace.rs
opentelemetry-stackdriver/: Cargo.toml
opentelemetry-stackdriver/src/: lib.rs
opentelemetry-stdout/: Cargo.toml  README.md
opentelemetry-stdout/examples/: basic.rs
opentelemetry-stdout/src/: common.rs  lib.rs
opentelemetry-stdout/src/logs/: exporter.rs  mod.rs  transform.rs
opentelemetry-stdout/src/metrics/: exporter.rs  transform.rs
opentelemetry-stdout/src/trace/: exporter.rs  transform.rs
opentelemetry-zipkin/: Cargo.toml
opentelemetry-zipkin/examples/: zipkin.rs
opentelemetry-zipkin/src/: lib.rs
opentelemetry-zipkin/src/exporter/: mod.rs  uploader.rs
opentelemetry-zipkin/src/exporter/model/: annotation.rs  mod.rs  span.rs
opentelemetry-zipkin/src/propagator/: mod.rs
opentelemetry-zpages/: Cargo.toml  README.md
opentelemetry-zpages/examples/: zpages.rs
opentelemetry-zpages/src/: lib.rs
opentelemetry-zpages/src/trace/: aggregator.rs  mod.rs  span_processor.rs  span_queue.rs
opentelemetry/src/: lib.rs
stress/: Cargo.toml
stress/src/: metrics.rs
