[package]
name = "opentelemetry-aws"
version = "0.7.0"
description = "AWS exporters and propagators for OpenTelemetry"
homepage = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-aws"
repository = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-aws"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
]
keywords = ["opentelemetry", "tracing"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.60"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["trace"]
trace = ["ts_opentelemetry_api/trace"]

[dependencies]
once_cell = "1.12"
ts_opentelemetry_api = { version = "0.20.0-beta.1", path = "../opentelemetry-api" }

[dev-dependencies]
ts_opentelemetry_api = { path = "../opentelemetry-api", features = ["trace"] }
ts_opentelemetry_sdk = { path = "../opentelemetry-sdk", features = ["trace", "testing"] }
ts_opentelemetry_http = { path = "../opentelemetry-http" }
ts_opentelemetry_stdout = { path = "../opentelemetry-stdout", features = ["trace"] }
hyper = { version = "0.14" }
tokio = { version = "1.0", features = ["macros", "rt"] }
