[package]
name = "opentelemetry-datadog"
version = "0.7.0"
description = "Datadog exporters and propagators for OpenTelemetry"
homepage = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-datadog"
repository = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-datadog"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
]
keywords = ["opentelemetry", "tracing"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.60"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
reqwest-blocking-client = ["reqwest/blocking", "ts_opentelemetry_http/reqwest"]
reqwest-client = ["reqwest", "ts_opentelemetry_http/reqwest"]
surf-client = ["surf", "ts_opentelemetry_http/surf"]

[dependencies]
indexmap = "1.8"
once_cell = "1.12"
ts_opentelemetry = { version = "0.20.0-beta.1", path = "../opentelemetry", features = ["trace"] }
ts_opentelemetry_http = { version = "0.9.0-beta.1", path = "../opentelemetry-http" }
ts_opentelemetry_semantic_conventions = { version = "0.12.0-beta.1", path = "../opentelemetry-semantic-conventions" }
rmp = "0.8"
url = "2.2"
reqwest = { version = "0.11", default-features = false, optional = true }
surf = { version = "2.0", default-features = false, optional = true }
thiserror = "1.0"
itertools = "0.10"
http = "0.2"
futures-core = "0.3"

[dev-dependencies]
async-trait = "0.1"
base64 = "0.13"
bytes = "1"
futures-util = { version = "0.3", features = ["io"] }
isahc = "1.4"
ts_opentelemetry = { path = "../opentelemetry", features = ["trace", "testing"] }

[[example]]
name = "datadog"
path = "examples/datadog.rs"