[package]
name = "ts_opentelemetry_http"
version = "0.9.0-beta.1"
description = "This is a fork of the helper implementations for exchange of traces and metrics over HTTP"
homepage = "https://github.com/ThetaSinner/opentelemetry-rust"
repository = "https://github.com/ThetaSinner/opentelemetry-rust"
keywords = ["opentelemetry", "tracing", "metrics"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.60"

[dependencies]
async-trait = "0.1"
bytes = "1"
http = "0.2"
hyper = { version = "0.14", default-features = false, features = ["http2", "client", "tcp"], optional = true }
isahc = { version = "1.4", default-features = false, optional = true }
ts_opentelemetry_api = { version = "0.20", path = "../opentelemetry-api", features = ["trace"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking"], optional = true }
surf = { version = "2.0", default-features = false, optional = true }
tokio = { version = "1.0", default-features = false, features = ["time"], optional = true }
