[package]
name = "ts_opentelemetry_semantic_conventions"
version = "0.12.0-beta.1"
description = "Semantic conventions for OpenTelemetry"
homepage = "https://github.com/ThetaSinner/opentelemetry-rust"
repository = "https://github.com/ThetaSinner/opentelemetry-rust"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["opentelemetry", "tracing", "async"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.60"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ts_opentelemetry = { version = "0.20", default-features = false, path = "../opentelemetry" }

[dev-dependencies]
ts_opentelemetry = { default-features = false, features = ["trace"], path = "../opentelemetry" }
