[package]
name = "ts_opentelemetry_stdout"
version = "0.1.0-beta.1"
description = "A fork of an OpenTelemetry exporter for stdout"
homepage = "https://github.com/ThetaSinner/opentelemetry-rust"
repository = "https://github.com/ThetaSinner/opentelemetry-rust"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["opentelemetry", "tracing", "metrics"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.60"

[features]
trace = ["opentelemetry_api/trace", "opentelemetry_sdk/trace", "futures-util"]
metrics = ["async-trait", "opentelemetry_api/metrics", "opentelemetry_sdk/metrics"]
logs = ["opentelemetry_api/logs", "opentelemetry_sdk/logs", "async-trait", "thiserror"]

[dependencies]
async-trait = { version = "0.1", optional = true }
thiserror = { version = "1", optional = true }
futures-util = { version = "0.3", optional = true, default-features = false }
ts_opentelemetry_api = { version = "0.20", path = "../opentelemetry-api", default_features = false }
ts_opentelemetry_sdk = { version = "0.20", path = "../opentelemetry-sdk", default_features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ordered-float = "3.4.0"

[dev-dependencies]
ts_opentelemetry_api = { version = "0.20", path = "../opentelemetry-api", features = ["metrics"] }
ts_opentelemetry_sdk = { version = "0.20", path = "../opentelemetry-sdk", features = ["rt-tokio", "metrics"] }
tokio = { version = "1.27", features = ["full"] }
