[package]
name = "opentelemetry-zipkin"
version = "0.17.0"
description = "Zipkin exporter for OpenTelemetry"
homepage = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-zipkin"
repository = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-zipkin"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["opentelemetry", "zipkin", "tracing", "async"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.60"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["reqwest-blocking-client", "reqwest/native-tls"]
reqwest-blocking-client = ["reqwest/blocking", "ts_opentelemetry_http/reqwest"]
reqwest-client = ["reqwest", "ts_opentelemetry_http/reqwest"]
reqwest-rustls = ["reqwest", "reqwest/rustls-tls-native-roots"]
surf-client = ["surf", "ts_opentelemetry_http/surf"]

[dependencies]
async-trait = "0.1"
ts_opentelemetry = { version = "0.20.0-beta.1", path = "../opentelemetry", features = ["trace"] }
ts_opentelemetry_http = { version = "0.9.0-beta.1", path = "../opentelemetry-http" }
ts_opentelemetry_semantic_conventions = { version = "0.12.0-beta.1", path = "../opentelemetry-semantic-conventions" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
typed-builder = "0.12"
once_cell = "1.12"
http = "0.2"
reqwest = { version = "0.11", optional = true, default-features = false }
surf = { version = "2.0", optional = true, default-features = false }
thiserror = { version = "1.0"}
futures-core = "0.3"

[dev-dependencies]
bytes = "1"
futures-util = { version = "0.3", features = ["io"] }
hyper = "0.14"
ts_opentelemetry = { default-features = false, features = ["trace", "testing"], path = "../opentelemetry" }
