[package]
name = "ts_opentelemetry"
version = "0.20.0-beta.1"
description = "A fork of a metrics collection and distributed tracing framework"
homepage = "https://github.com/ThetaSinner/opentelemetry-rust"
repository = "https://github.com/ThetaSinner/opentelemetry-rust"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "api-bindings",
    "asynchronous",
]
keywords = ["opentelemetry", "logging", "tracing", "metrics", "async"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.60"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ts_opentelemetry_api = { version = "0.20", path = "../opentelemetry-api" }
ts_opentelemetry_sdk = { version = "0.20", path = "../opentelemetry-sdk" }

[dev-dependencies]
ts_opentelemetry_stdout = { path = "../opentelemetry-stdout" }

[features]
default = ["trace"]
trace = ["opentelemetry_api/trace", "opentelemetry_sdk/trace", "opentelemetry-stdout/trace"]
metrics = ["opentelemetry_api/metrics", "opentelemetry_sdk/metrics", "opentelemetry-stdout/metrics"]
logs = ["opentelemetry_sdk/logs"]
testing = ["opentelemetry_api/testing", "opentelemetry_sdk/testing"]
rt-tokio = ["opentelemetry_sdk/rt-tokio"]
rt-tokio-current-thread = ["opentelemetry_sdk/rt-tokio-current-thread"]
rt-async-std = ["opentelemetry_sdk/rt-async-std"]
