[package]
name = "ts_opentelemetry"
version = "0.20.0-beta.1"
description = "A fork of a metrics collection and distributed tracing framework"
homepage = "https://github.com/ThetaSinner/opentelemetry-rust"
repository = "https://github.com/ThetaSinner/opentelemetry-rust"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "api-bindings",
    "asynchronous",
]
keywords = ["opentelemetry", "logging", "tracing", "metrics", "async"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.60"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ts_opentelemetry_api = { version = "0.20.0-beta.1", path = "../opentelemetry-api" }
ts_opentelemetry_sdk = { version = "0.20.0-beta.1", path = "../opentelemetry-sdk" }

[dev-dependencies]
ts_opentelemetry_stdout = { path = "../opentelemetry-stdout" }

[features]
default = ["trace"]
trace = ["ts_opentelemetry_api/trace", "ts_opentelemetry_sdk/trace"]
metrics = ["ts_opentelemetry_api/metrics", "ts_opentelemetry_sdk/metrics"]
logs = ["ts_opentelemetry_sdk/logs"]
testing = ["ts_opentelemetry_api/testing", "ts_opentelemetry_sdk/testing"]
rt-tokio = ["ts_opentelemetry_sdk/rt-tokio"]
rt-tokio-current-thread = ["ts_opentelemetry_sdk/rt-tokio-current-thread"]
rt-async-std = ["ts_opentelemetry_sdk/rt-async-std"]
