[package]
name = "logs-basic"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ts_opentelemetry_api = { path = "../../opentelemetry-api", features = ["logs"] }
ts_opentelemetry_sdk = { path = "../../opentelemetry-sdk", features = ["logs"] }
ts_opentelemetry_stdout = { path = "../../opentelemetry-stdout", features = ["logs"]}
opentelemetry-appender-log = { path = "../../opentelemetry-appender-log"}
log = {version = "0.4.17"}
