[package]
name = "metrics-basic"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ts_opentelemetry_api = { path = "../../opentelemetry-api", features = ["metrics"] }
ts_opentelemetry_sdk = { path = "../../opentelemetry-sdk", features = ["metrics", "rt-tokio"] }
ts_opentelemetry_stdout = { path = "../../opentelemetry-stdout", features = ["metrics"]}
tokio = { version = "1.0", features = ["full"] }
