[package]
name = "remote-sampler"
version = "0.1.0"
edition = "2021"

[dependencies]
ts_opentelemetry_sdk = { path = "../../../opentelemetry-sdk", features = ["rt-tokio", "jaeger_remote_sampler"] }
ts_opentelemetry_api = { path = "../../../opentelemetry-api" }
ts_opentelemetry_stdout = { path = "../../../opentelemetry-stdout", features = ["trace"] }
reqwest = "0.11.10"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }
