[package]
name = "basic-otlp"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
once_cell = "1.17"
ts_opentelemetry_api = { path = "../../../opentelemetry-api", features = ["metrics"] }
ts_opentelemetry_sdk = { path = "../../../opentelemetry-sdk", features = ["rt-tokio"] }
opentelemetry-otlp = { path = "../../../opentelemetry-otlp", features = ["tonic", "metrics"] }
ts_opentelemetry_semantic_conventions = { path = "../../../opentelemetry-semantic-conventions" }
tokio = { version = "1.0", features = ["full"] }
